--- a/BookGarden-Client/src/components/layout/Header/header.css
+++ b/BookGarden-Client/src/components/layout/Header/header.css
@@ -1,60 +1,59 @@
-.image{
-    width: 20px;
-    height: 15px;
+.image {
+  width: 20px;
+  height: 15px;
 }
 
 .hoverLink {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: none;
   cursor: pointer;
   display: inline-block;
   position: relative;
 }
 
-.hoverLink:after {    
+.hoverLink:after {
   background: none repeat scroll 0 0 transparent;
   bottom: 0px;
   content: "";
   height: 2px;
   left: 50%;
   position: absolute;
-  background: #FFFFFF;
+  background: #ffffff;
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
-  
+
   margin-bottom: 12px;
 }
 
-.hoverLink:hover:after { 
-  width: 100%; 
-  left: 0; 
+.hoverLink:hover:after {
+  width: 100%;
+  left: 0;
 }
 
-.fixLine{
+.fixLine {
   display: -webkit-box;
   -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical; 
+  -webkit-box-orient: vertical;
   max-width: 400px;
   margin: 0 0 1em 0;
-  overflow: hidden; 
+  overflow: hidden;
 }
 
-.header-logo{
+.header-logo {
   display: none;
 }
 
 @media screen and (max-width: 480px) {
-  .header-text{
+  .header-text {
     display: none;
   }
 
-  .header-logo{
+  .header-logo {
     display: block;
   }
 
-  .ant-layout-header{
+  .ant-layout-header {
     padding: 0;
     padding-left: 10px;
   }
-
 }
